--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote-theme: just-the-docs
+#remote-theme: just-the-docs
 theme: just-the-docs
 color_scheme: dark
 #theme: minima
