--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
       defaults:
         run:
-          working_directory: docs
+          working-directory: docs
     steps:
       - name: Checkout
         uses: actions/checkout@v3
