--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,9 +28,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#remote-theme: just-the-docs
 theme: just-the-docs
-color_scheme: dark
+color_scheme: light
 #theme: minima
 plugins:
   - jekyll-feed
